--- a/index.html
+++ b/index.html
@@ -1,52 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+
     <title>Windows8 by royal27</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/respond.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lt IE 8]>
-    <link rel="stylesheet" href="stylesheets/ie.css">
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-
   </head>
+
   <body>
-      <div id="header">
-        <nav>
-          <li class="fork"><a href="https://github.com/royal27/windows8">View On GitHub</a></li>
-          <li class="downloads"><a href="https://github.com/royal27/windows8/zipball/master">ZIP</a></li>
-          <li class="downloads"><a href="https://github.com/royal27/windows8/tarball/master">TAR</a></li>
-          <li class="title">DOWNLOADS</li>
-        </nav>
-      </div><!-- end header -->
 
-    <div class="wrapper">
+    <header>
+      <div class="container">
+        <h1>Windows8</h1>
+        <h2>cd-key</h2>
 
-      <section>
-        <div id="title">
-          <h1>Windows8</h1>
-          <p>cd-key</p>
-          <hr>
-          <span class="credits left">Project maintained by <a href="https://github.com/royal27">royal27</a></span>
-          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="http://twitter.com/#!/michigangraham">mattgraham</a></span>
-        </div>
+        <section id="downloads">
+          <a href="https://github.com/royal27/windows8/zipball/master" class="btn">Download as .zip</a>
+          <a href="https://github.com/royal27/windows8/tarball/master" class="btn">Download as .tar.gz</a>
+          <a href="https://github.com/royal27/windows8" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
+        </section>
+      </div>
+    </header>
 
+    <div class="container">
+      <section id="main_content">
         <p>Cd Key windows 8</p>
 
-<p>Intra pe <a href="https://github.com/royal27/windows8">https://github.com/royal27/windows8</a></p>
+<p><a href="https://github.com/royal27/windows8/blob/master/cd-key">Click Here</a></p>
 
-<p>Enter to <a href="https://github.com/royal27/windows8">https://github.com/royal27/windows8</a></p>
+<p><a href="https://github.com/royal27/windows8/blob/master/cd-key">Click aici</a></p>
       </section>
-
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
+
               <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
